Added Bootstrap gem and configuration for styling

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1 class="text-teal-500">Welcome to the One Month Rails Course</h1>
-<p>This course teaches Ruby on Rails from scratch a fundamental course for beginners.</p>
-<button>Sign up here</button>
+<div class="container">
+  <h1 class="text-teal-500">Welcome to the One Month Rails Course</h1>
+  <p>This course teaches Ruby on Rails from scratch a fundamental course for beginners.</p>
+  <button class="btn btn-info">Sign up here</button>
+  
+</div>
